public/styles/Shift.scss
@import "variables";
.shift {
    &.focus {
        background-color: rgba(0, 0, 0, 0.12);
    }

    display: flex;
    flex-direction: row;

    .elem {
        margin: 0 10px;
    }

    .shift-members {
        display: flex;
        @media (max-width: 576px) {
            flex-direction: column;
        }
        @media (min-width: 577px) {
            flex-direction: row;
        }


        .date {
            display: flex;
            width: 130px;
        }

        .times {
            @media (max-width: 576px) {
                margin: 0 10px;
                display: flex;
                flex-direction: column;
            }
            .time {
                width: 50px;
                direction: ltr;
                margin: 0 10px;

                input {
                    text-align: center
                }
            }
        }
    }

    .name-container {
        display: flex;

        .icon {
            padding-top: 5px;
        }
        .name {
            @media (max-width: 576px) {
                display: flex;
                align-items: center;
            }
            @media (min-width: 577px) {
                min-width: 100px;
                padding-top: 5px;
            }
        }
    }


    .warning {
        margin-top: 5px;
        margin-right: 7px;
        color: orange;
    }
}

